--- a/scss/main.scss
+++ b/scss/main.scss
@@ -26,7 +26,11 @@ body {
 }
 
 .hero-title {
+   outline: 1px solid red;
+   max-width: 450px;
    text-align: center;
+   margin-right: auto;
+   margin-left: auto;
    h1 {
       font-size: $fs-lg;
       font-weight: 200;
@@ -43,8 +47,8 @@ body {
 }
 
 .card {
+   max-width: 450px;
    margin-bottom: 1.5rem;
-
    padding: 1.5rem;
    font-size: $fs-rg;
    border-radius: 10px;
@@ -96,5 +100,39 @@ body {
 .card-4 {
    .card-top {
       background-color: $bt-blue;
+   }
+}
+
+@media (min-width: 768px) {
+   body {
+      font-size: $fs-lg;
+   }
+
+   .container {
+      align-items: center;
+   }
+
+   .hero-title {
+      h1 {
+         font-size: 2rem;
+      }
+   }
+
+   .cards-wrap {
+      margin-top: 3rem;
+      .card {
+         // outline: 1px solid red;
+
+         margin-bottom: 2rem;
+         h3 {
+            margin-bottom: 0.5rem;
+            font-size: $fs-lg;
+         }
+
+         p {
+            font-size: $fs-rg;
+            color: $fc-gray-blue;
+         }
+      }
    }
 }
