--- a/scss/base/_variables.scss
+++ b/scss/base/_variables.scss
@@ -10,7 +10,9 @@ $fc-gray-blue: hsl(229, 6%, 66%);
 $fc-light-gray: hsl(0, 0%, 98%);
 
 // font
-$fs-rg: 0.9375rem;
+$fs-xl: 2rem;
 $fs-lg: 1.5rem;
+$fs-rg: 0.9375rem;
+
 $fs-sm: 0.8rem;
 $ff: "Poppins", sans-serif;
