--- a/scss/main.scss
+++ b/scss/main.scss
@@ -17,7 +17,7 @@ body {
 }
 
 .container {
-   outline: 1px solid red;
+   // outline: 1px solid red;
    max-width: 1280px;
    padding: 5rem 2rem;
    display: grid;
@@ -26,7 +26,7 @@ body {
 }
 
 .hero-title {
-   outline: 1px solid red;
+   // outline: 1px solid red;
    max-width: 450px;
    text-align: center;
    margin-right: auto;
@@ -104,9 +104,6 @@ body {
 }
 
 @media (min-width: 768px) {
-   body {
-   }
-
    .container {
       align-items: center;
    }
@@ -136,5 +133,55 @@ body {
             color: $fc-gray-blue;
          }
       }
+   }
+}
+
+@media (min-width: 1280px) {
+   .container {
+      grid-template-rows: 1fr 2fr;
+   }
+
+   .hero-title {
+      max-width: 500px;
+
+      h1 {
+         font-size: $fs-xl;
+      }
+   }
+
+   .cards-wrap {
+      // outline: 1px solid green;
+      display: grid;
+      grid-template-columns: 1fr 1fr 1fr;
+      grid-template-rows: 1fr 1fr 1fr 1fr;
+      grid-auto-columns: 1fr;
+      column-gap: 1.5rem;
+
+      grid-auto-flow: row;
+      grid-template-areas:
+         ". card-2 ."
+         "card-1 card-2 card-4"
+         "card-1 card-3 card-4"
+         ". card-3 .";
+   }
+
+   .card {
+      align-self: center;
+   }
+
+   .card-1 {
+      grid-area: card-1;
+   }
+
+   .card-2 {
+      grid-area: card-2;
+   }
+
+   .card-3 {
+      grid-area: card-3;
+   }
+
+   .card-4 {
+      grid-area: card-4;
    }
 }
